# alfred

./: .gitignore  BUILD  README.md  WORKSPACE  go.mod  go.sum
.github/workflows/: main.yml
cmd/echo/: BUILD.bazel  main.go
cmd/echo2/: BUILD.bazel  main.go
pkg/echo/: BUILD.bazel  service.go  service_test.go
pkg/echo2/: BUILD.bazel  service.go  service_test.go
pkg/intent/: BUILD.bazel  intent.go  intent_test.go  types.go
pkg/log/: BUILD.bazel  logger.go  logger_test.go
pkg/logger/: BUILD.bazel  logger.go  logger_test.go
pkg/skill/: BUILD.bazel  doc.go  types.go
pkg/skill/tags/: BUILD.bazel  tags_test.go
