load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "echo2_lib",
    srcs = ["main.go"],
    importpath = "github.com/gavinmead/alfred/cmd/echo2",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "echo2",
    embed = [":echo2_lib"],
    visibility = ["//visibility:public"],
)
