load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "echo2",
    srcs = ["service.go"],
    importpath = "github.com/gavinmead/alfred/pkg/echo2",
    visibility = ["//visibility:public"],
)

go_test(
    name = "echo2_test",
    srcs = ["service_test.go"],
    embed = [":echo2"],
    deps = ["@com_github_stretchr_testify//assert"],
)
