load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "intent",
    srcs = [
        "intent.go",
        "types.go",
    ],
    importpath = "github.com/gavinmead/alfred/pkg/intent",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/log",
        "@org_uber_go_zap//:zap",
        "@com_github_jdkato_prose_v2//:prose",
        "@com_github_aaaton_golem_v4//:golem",
        "@com_github_aaaton_golem_v4_dicts_en//:en"
    ]
)

go_test(
    name = "intent_test",
    srcs = ["intent_test.go"],
    embed = [":intent"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//suite",
        "@org_uber_go_zap//:zap",
    ],
)
