load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "logger",
    srcs = ["logger.go"],
    importpath = "github.com/gavinmead/alfred/pkg/logger",
    visibility = ["//visibility:public"],
    deps = ["@org_uber_go_zap//:zap"],
)

go_test(
    name = "logger_test",
    srcs = ["logger_test.go"],
    embed = [":logger"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@org_uber_go_zap//:zap",
    ],
)
